--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 node_modules
 /dist
 
+backend/__pycache__/
+*.py[cod]
+backend/venv
+pip-log.txt
+pip-delete-this-directory.txt
+
 # local env files
 .env.local
 .env.*.local
